--- a/fabricjschess/practice.html
+++ b/fabricjschess/practice.html
@@ -58,53 +58,16 @@
       'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
       'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
     };
-
     let game = [];
     let isWhiteTurn = true;
     let selectedPiece = null;
     let isTTSOn = true;
 
-    // Speak text using TTS
     function speak(text) {
       if (isTTSOn) {
         const utterance = new SpeechSynthesisUtterance(text);
         window.speechSynthesis.speak(utterance);
       }
-    }
-
-    // Find the current player's king position
-    function findKingPosition(isWhite) {
-      const king = isWhite ? 'K' : 'k';
-      for (let row = 0; row < 8; row++) {
-        for (let col = 0; col < 8; col++) {
-          if (game[row][col] === king) {
-            return { row, col };
-          }
-        }
-      }
-      return null;
-    }
-
-    // Check if a square is under attack
-    function isSquareUnderAttack(row, col, isWhite) {
-      for (let i = 0; i < 8; i++) {
-        for (let j = 0; j < 8; j++) {
-          const piece = game[i][j];
-          if (piece && ((isWhite && piece === piece.toLowerCase()) || (!isWhite && piece === piece.toUpperCase()))) {
-            if (isValidMove(piece, i, j, row, col, true)) {
-              return true;
-            }
-          }
-        }
-      }
-      return false;
-    }
-
-    // Check if the current player's king is in check
-    function isKingInCheck(isWhite) {
-      const kingPosition = findKingPosition(isWhite);
-      if (!kingPosition) return false;
-      return isSquareUnderAttack(kingPosition.row, kingPosition.col, isWhite);
     }
 
     function drawBoard() {
@@ -174,52 +137,80 @@
       document.getElementById('tts-status').textContent = isTTSOn ? "Turn off TTS" : "Turn on TTS";
     }
 
-    function isValidMove(piece, startRow, startCol, endRow, endCol, skipKingCheck = false) {
+    function isValidMove(piece, startRow, startCol, endRow, endCol) {
       const rowDiff = endRow - startRow;
       const colDiff = Math.abs(startCol - endCol);
 
-      let isValid = false;
       switch (piece.toLowerCase()) {
         case 'p': {
-          const direction = piece === 'P' ? -1 : 1;
+          const direction = piece === 'P' ? -1 : 1; // White moves up (-1), Black moves down (+1)
           const startRowPawn = piece === 'P' ? 6 : 1;
-          isValid =
+          return (
             (colDiff === 0 &&
               ((rowDiff === direction && game[endRow][endCol] === '') ||
-               (rowDiff === 2 * direction && startRow === startRowPawn && game[startRow + direction][startCol] === '' && game[endRow][endCol] === ''))) ||
-            (colDiff === 1 && rowDiff === direction && game[endRow][endCol] !== '');
-          break;
+               (rowDiff === 2 * direction && game[endRow][endCol] === '' && startRow === startRowPawn && game[startRow + direction][startCol] === ''))) ||
+            (colDiff === 1 && rowDiff === direction && game[endRow][endCol] !== '' && isOpponentPiece(endRow, endCol))
+          );
         }
         case 'r':
-          isValid = (startRow === endRow || startCol === endCol);
-          break;
+          return (startRow === endRow || startCol === endCol) && isPathClear(startRow, startCol, endRow, endCol);
         case 'n':
-          isValid = (Math.abs(rowDiff) === 2 && colDiff === 1) || (Math.abs(rowDiff) === 1 && colDiff === 2);
-          break;
+          return (Math.abs(rowDiff) === 2 && colDiff === 1) || (Math.abs(rowDiff) === 1 && colDiff === 2);
         case 'b':
-          isValid = Math.abs(rowDiff) === colDiff;
-          break;
+          return Math.abs(rowDiff) === colDiff && isPathClear(startRow, startCol, endRow, endCol);
         case 'q':
-          isValid = Math.abs(rowDiff) === colDiff || startRow === endRow || startCol === endCol;
-          break;
+          return (
+            (startRow === endRow || startCol === endCol || Math.abs(rowDiff) === colDiff) &&
+            isPathClear(startRow, startCol, endRow, endCol)
+          );
         case 'k':
-          isValid = Math.abs(rowDiff) <= 1 && colDiff <= 1;
-          break;
+          return Math.abs(rowDiff) <= 1 && colDiff <= 1;
         default:
           return false;
       }
-
-      if (isValid && !skipKingCheck) {
-        const originalPiece = game[endRow][endCol];
-        game[endRow][endCol] = piece;
-        game[startRow][startCol] = '';
-        const isInCheck = isKingInCheck(isWhiteTurn);
-        game[startRow][startCol] = piece;
-        game[endRow][endCol] = originalPiece;
-        if (isInCheck) isValid = false;
-      }
-      return isValid;
     }
+
+    function isPathClear(startRow, startCol, endRow, endCol) {
+      const rowStep = startRow < endRow ? 1 : startRow > endRow ? -1 : 0;
+      const colStep = startCol < endCol ? 1 : startCol > endCol ? -1 : 0;
+      let row = startRow + rowStep;
+      let col = startCol + colStep;
+      while (row !== endRow || col !== endCol) {
+        if (game[row][col] !== '') return false;
+        row += rowStep;
+        col += colStep;
+      }
+      return true;
+    }
+
+    function isOpponentPiece(row, col) {
+      const piece = game[row][col];
+      return (isWhiteTurn && piece === piece.toLowerCase()) || (!isWhiteTurn && piece === piece.toUpperCase());
+    }
+
+    canvas.on('mouse:down', (event) => {
+      const pointer = canvas.getPointer(event.e);
+      const row = Math.floor(pointer.y / 60);
+      const col = Math.floor(pointer.x / 60);
+      const piece = game[row][col];
+      if (selectedPiece) {
+        const { row: startRow, col: startCol, piece: selectedPieceType } = selectedPiece;
+        if (isValidMove(selectedPieceType, startRow, startCol, row, col)) {
+          game[row][col] = selectedPieceType;
+          game[startRow][startCol] = '';
+          drawPieces();
+          speak(`${selectedPieceType.toUpperCase()} moved to ${String.fromCharCode(97 + col)}${8 - row}`);
+          isWhiteTurn = !isWhiteTurn;
+          speak(isWhiteTurn ? "White's turn." : "Black's turn.");
+        } else {
+          speak("Invalid move.");
+        }
+        selectedPiece = null;
+      } else if (piece && ((isWhiteTurn && piece === piece.toUpperCase()) || (!isWhiteTurn && piece === piece.toLowerCase()))) {
+        selectedPiece = { row, col, piece };
+        speak(`${piece.toUpperCase()} selected.`);
+      }
+    });
 
     startRestartGame();
   </script>
